# smart-wallet-demo-app

./: .env.example  .eslintrc  .gitignore  .gitmodules  .prettierignore  .prettierrc.js  .prettierrc.mjs  Cargo.toml  Makefile  README.md  docker-compose.yml  install_stellar.sh  package-lock.json  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/backend/: code-quality.yaml
.github/actions/web/: build.yaml
.github/workflows/: backend.build.yaml  backend.code-quality.yaml  backend.deploy-heroku.yaml  backend.deploy.yaml  backend.set-outputs.yaml  backend.yaml  contracts-code-quality.yaml  contracts.build.yaml  contracts.code-quality.yaml  contracts.yaml  web.build.yaml  web.code-quality.yaml  web.deploy-heroku.yaml  web.deploy.yaml  web.set-outputs.yaml  web.yaml
.github/workflows/backend/: set-outputs.yaml
.github/workflows/web/: code-quality.yaml
.husky/: install.mjs  pre-commit
apps/backend/: .gitignore  Dockerfile  README.md  entrypoint.sh  package.json  tsconfig-build.json  tsconfig.json
apps/backend/docs/vscode/: launch.json
apps/backend/src/: app.ts  index.d.ts  instrument.ts  vitest.config.ts
apps/backend/src/api/core/: cli.ts  docs.ts  routes.ts
apps/backend/src/api/embedded-wallets/: docs.ts  routes.ts
apps/backend/src/api/feature-flags/: docs.ts
apps/backend/src/api/general-settings/: docs.ts  routes.ts
apps/backend/src/api/proofs/: docs.ts  get-proof-by-address.test.ts  get-proof-by-address.ts  routes.ts
apps/backend/src/config/: .env.example  env-utils.ts  env.ts  setup-tests.ts
apps/backend/src/config/axios-logger/: index.ts
apps/backend/src/config/database/: data-source.ts  index.ts  test-data-source.ts
apps/backend/src/config/logger/: index.ts  logger-tests.ts
apps/backend/src/config/stellar/: index.ts  types.ts
apps/backend/src/errors/: messages.ts  types.ts
apps/backend/src/errors/exceptions/: bad-request.ts  base.ts  resource-conflict.ts  resource-not-found.ts  unauthorized.ts  zod-validation.test.ts  zod-validation.ts
apps/backend/src/interfaces/: index.ts
apps/backend/src/interfaces/batch-mint/: batch-processor.ts  mint-queue.ts
apps/backend/src/interfaces/cli/: index.ts
apps/backend/src/interfaces/email-provider/: mock.ts  types.ts
apps/backend/src/interfaces/express/: index.ts
apps/backend/src/interfaces/gift-eligibility-service/: index.test.ts  index.ts  mock.ts
apps/backend/src/interfaces/horizon/: index.test.ts  index.ts  mock.ts  types.ts
apps/backend/src/interfaces/jwt/: index.test.ts  index.ts
apps/backend/src/interfaces/sdp-embedded-wallets/: index.test.ts  index.ts  (+2 more)
apps/backend/src/test-utils/: index.ts
apps/backend/src/types/: proof.ts
apps/web/: .gitignore  Dockerfile  README.md  entrypoint.sh  index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/.storybook/: main.js  preview.js
apps/web/docs/: ASSETS_AND_CONTENT.md
apps/web/public/: manifest.json
apps/web/src/: index.css  index.tsx  instrument.ts  query-client.d.ts  setup-tests.ts  vite-env.d.ts
apps/web/src/config/: .env.example  assets.example.json  content.example.json  reportWebVitals.ts
apps/web/src/constants/: app.ts
complete_infra/: .env.example  README.md  docker-compose.yml
contracts/: .gitignore  Cargo.toml  README.md
contracts/airdrop/: Cargo.toml  Makefile  README.md
contracts/airdrop/src/: lib.rs  test.rs
contracts/airdrop/test_snapshots/test/: test_bad_claim.1.json  test_claimed_not_reset.1.json  test_double_claim.1.json  test_recover_unclaimed.1.json  test_recover_unclaimed_no_funder_auth.1.json  test_recover_unclaimed_to_funder.1.json  test_valid_claim.1.json
contracts/nft/: Cargo.toml  Makefile  README.md  stellar.toml  tokens.json  tokens_10.json  tokens_8.json  tokens_medium.json  tokens_small.json
contracts/nft/src/: contract.rs  errors.rs  lib.rs  test.rs  types.rs
contracts/non-fungible-token/: Cargo.toml
contracts/non-fungible-token/src/: contract.rs  test.rs
contracts/router/: Cargo.toml  README.md
contracts/router/src/: lib.rs  test.rs
infra/: .env.example  README.md  docker-compose.yml
patches/: @stellar+design-system+3.1.1.patch  @stellar+design-system+3.1.4.patch  install.sh  tailwindcss+3.4.17.patch
scripts/: deploy-airdrop.mjs  deploy-nft-cli.mjs  generate-proofs.mjs  package.json  seed-xlm-asset.mjs  upload-proofs-to-db.mjs
scripts/assets/metadata/: PIN-0.json
scripts/helpers/: contract-helpers.mjs  index.mjs  ipfs-helpers.mjs  ipfs-images.mjs  ipfs-metadatas.mjs  logs.mjs  merkle.mjs  pinata.mjs  run-command.mjs
scripts/nft/: config.mjs  deploy-nft-ipfs.mjs  set-token-metadata.mjs
wasms/: airdrop.optimized.wasm  nft.optimized.wasm  router.optimized.wasm
(+788 files in other folders)
