[workspace.package]
authors = ["CheeseCake Labs"]
edition = "2021"
license = "MIT"
repository = "https://github.com/CheeseCakeLabs/stellar-contracts"
version = "0.0.0"

[workspace]
resolver = "2"
members = [
  "contracts/*",
  "packages/access/*",
  "packages/constants",
  "packages/contract-utils/*",
  "packages/test-utils/*",
  "packages/tokens/*",
]

[workspace.dependencies]
soroban-sdk = "22.0.6"
proc-macro2 = "1.0"
proptest = "1"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
soroban-test-helpers = "0.2.3"
hex-literal = "0.4.1"

# Stellar OpenZeppelin Contracts
stellar-access-control = { path = "packages/access/access-control" }
stellar-access-control-macros = { path = "packages/access/access-control-macros" }
stellar-constants = { path = "packages/constants" }
stellar-default-impl-macro = { path = "packages/contract-utils/default-impl-macro" }
stellar-event-assertion = { path = "packages/test-utils/event-assertion" }
stellar-fungible = { path = "packages/tokens/fungible" }
stellar-macro-helpers = { path = "packages/contract-utils/macro-helpers" }
stellar-non-fungible = { path = "packages/tokens/non-fungible" }
stellar-ownable = { path = "packages/access/ownable" }
stellar-ownable-macro = { path = "packages/access/ownable-macro" }
stellar-pausable = { path = "packages/contract-utils/pausable" }
stellar-pausable-macros = { path = "packages/contract-utils/pausable-macros" }
stellar-role-transfer = { path = "packages/access/role-transfer" }
stellar-upgradeable = { path = "packages/contract-utils/upgradeable" }
stellar-upgradeable-macros = { path = "packages/contract-utils/upgradeable-macros" }
stellar-crypto = { path = "packages/contract-utils/crypto" }
stellar-merkle-distributor = { path = "packages/contract-utils/merkle-distributor" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
