[package]
name = "airdrop"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-fungible = { workspace = true }
stellar-ownable = { workspace = true }
stellar-crypto = { workspace = true }
stellar-merkle-distributor = { workspace = true }

[dev-dependencies]
hex-literal = "1.0.0"
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-default-impl-macro = { workspace = true }
